--- a/code.css
+++ b/code.css
@@ -16,7 +16,7 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    color: black;
+    color: black !important;
     font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
     
@@ -59,7 +59,7 @@ button {
   border: 2px solid rgba(225,225, 225, 0.1);
   box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
   border: none;
-  color: black;
+  color: black !important;
   padding: 10px 20px;
   border-radius: 5px;
   font-size: 16px;
@@ -79,7 +79,7 @@ button:hover {
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
-  color: black;
+  color: black !important;
 
 }
 
@@ -89,7 +89,8 @@ footer{
     left: 0;
     bottom: 0;
     width: 100%;
-    color: black;
+    color: black !important;
     text-align: center;
 }
+
 
