--- a/code.css
+++ b/code.css
@@ -4,7 +4,7 @@ body{
    height: 100%;
    overflow: hidden;
    margin: 0;
-   font-size: larger;
+   font-size: large;
 }
 }
 
@@ -93,7 +93,9 @@ footer{
     width: 100%;
     color: black !important;
     text-align: center;
+    font-size: small;
 }
+
 
 
 
